aks/1.api-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: api

---
