aks/2.web-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web
