aks/poi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poiapp
  template:
    metadata:
      labels:
        app: poiapp
    spec:
      containers:
      - name: poiapp
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        image: registryouw8848.azurecr.io/poi:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-challenge5kv-msi"

---

apiVersion: v1
kind: Service
metadata:
  name: poiservice
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: poiapp
  ports:
  - port: 80
    targetPort: 80
