aks/trips.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripsapp
  template:
    metadata:
      labels:
        app: tripsapp
    spec:
      containers:
      - name: tripsapp
        image: registryouw8848.azurecr.io/trips:1.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: tripsservice
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: tripsapp
  ports:
  - port: 80
    targetPort: 80
