aks/tripviewer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewerapp
  template:
    metadata:
      labels:
        app: tripviewerapp
    spec:
      containers:
      - name: tripviewerapp
        image: registryouw8848.azurecr.io/tripviewer:1.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: tripviewerservice
  namespace: web
spec:
  type: LoadBalancer
  selector:
    app: tripviewerapp
  ports:
  - port: 80
    targetPort: 80
