aks/user-java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-javaapp
  template:
    metadata:
      labels:
        app: user-javaapp
    spec:
      containers:
      - name: user-javaapp
        image: registryouw8848.azurecr.io/user-java:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-challenge5kv-msi"
---

apiVersion: v1
kind: Service
metadata:
  name: user-javaservice
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: user-javaapp
  ports:
  - port: 80
    targetPort: 80
