aks/userprofile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofileapp
  template:
    metadata:
      labels:
        app: userprofileapp
    spec:
      containers:
      - name: userprofileapp
        image: registryouw8848.azurecr.io/userprofile:1.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: userprofileservice
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: userprofileapp
  ports:
  - port: 80
    targetPort: 80
