aks/ingress-master.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-master
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
  - hosts:
    - hackerteamone.australiaeast.cloudapp.azure.com
  rules:
  - host: hackerteamone.australiaeast.cloudapp.azure.com
