aks/ingress-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: hackerteamone.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: tripviewerservice
            port: 
              number: 80
